--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Cursor education</h1>
+		<h1>HELLO WORLD</h1>
 		<p>Github Pages.</p>
-		<img src "http://cursor.education/img/courses/webui-logo2.png">
-		</img>
+		
 	</body>
 </html>
